--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         <section class="hero">
 
             <div class="container">
-                <h1 class="hero-title">Эффективные решения </br>для вашего бизнеса</h1>
+                <h1 class="hero-title">Эффективные решения </br> для вашего бизнеса</h1>
                 <button type="button" class="hero-button button" data-modal-open>Заказать услугу</button>
             </div>
 
@@ -185,6 +185,7 @@
                                     </a>
                                 </li>
                             </ul>
+                        </div>
                     </li>
                     <li class="item">
                         <img src="./images/2/img5.jpg" alt="Фото Ольги Репиной" width="270" height="260">
@@ -383,7 +384,7 @@
 
                         </a>
                     </li>
-
+                </ul>
             </div>
 
         </section>
@@ -478,6 +479,73 @@
                     <use href="./images/symbol-defs.svg#close"></use>
                 </svg>
             </button>
+
+            <form class="modal-form">
+
+                <p class="modal-form-title">Оставьте свои данные, мы вам перезвоним</p>
+
+                <div class="modal-form-field">
+
+                    <label for="input-name" class="form-label"> Имя </label>
+                    <span class="input-wrap">
+                        <input type="text" name="username" id="input-name" class="form-input">
+
+                        <svg class="icon-form" width="18" height="18">
+                            <use href="./images/symbol-defs.svg#icon-person"></use>
+                        </svg>
+                    </span>
+                </div>
+
+                <div class="modal-form-field">
+
+                    <label for="input-tel" class="form-label"> Телефон </label>
+                    <span class="input-wrap">
+                        <input type="tel" name="tel" id="input-tel" class="form-input">
+
+                        <svg class="icon-form" width="18" height="18">
+                            <use href="./images/symbol-defs.svg#icon-phone"></use>
+                        </svg>
+                    </span>
+                </div>
+
+                <div class="modal-form-field">
+
+                    <label for="input-email" class="form-label"> Почта </label>
+                    <span class="input-wrap">
+                        <input type="email" name="email" id="input-email" class="form-input">
+
+                        <svg class="icon-form" width="18" height="18">
+                            <use href="./images/symbol-defs.svg#icon-email"></use>
+                        </svg>
+                    </span>
+                </div>
+
+                <div class="modal-form-field comment">
+
+                    <label for="input-comment" class="form-label"> Комментарий </label>
+
+                    <textarea name="comment" id="input-comment" placeholder="Введите текст"
+                        class="form-comment"></textarea>
+
+                </div>
+
+                <div class="modal-form-checkbox">
+
+                    <input type="checkbox" name="policy" id="check" class="checkbox">
+                    <label for="check" class="check-label">
+                        <span class="icon-check">
+                            <svg width="16" height="15">
+                                <use href="./images/symbol-defs.svg#icon-check"></use>
+                            </svg>
+                        </span>
+                        Соглашаюсь с рассылкой и принимаю <a href="" class="checkbox-link"> Условия договора </a>
+                    </label>
+
+                </div>
+
+                <button type="submit" class="form-button">Отправить</button>
+
+            </form>
         </div>
     </div>
 
