--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         <section class="hero">
 
             <div class="container">
-                <h1 class="hero-title">Эффективные решения </br> для вашего бизнеса</h1>
+                <h1 class="hero-title">Эффективные решения <br> для вашего бизнеса</h1>
                 <button type="button" class="hero-button button" data-modal-open>Заказать услугу</button>
             </div>
 
@@ -409,7 +409,7 @@
                 </address>
             </div>
 
-            <div class="footer-address">
+            <div class="footer-address-link">
                 <p class="footer-item">Присоединяйтесь</p>
                 <ul class="icon-footer list">
                     <li class="item-team">
